[tool.poetry]
name = "nonebot2_plugin_warframe_clock"
version = "1.0"
description = ""
authors = ["Aa <2272613209@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
nb-cli = "^0.6.7"
Pillow = "^9.1.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
