[tool.poetry]
name = "nonebot_plugin_warframe_clock"
version = "1.2"
description = "nonebot2插件，查询Warframe开放地图时间。"
authors = ["Aa <2272613209@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "2.0.0b3"
Pillow = "^9.1.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
